22 desarrollar UI select (#23)
* Creacion de PurchaseStateContainer

* hemos añadido el servicio del stateContainer al program

---------
